# tvix

./: Cargo.nix  Cargo.toml  README.md  crate-hashes.json  shell.nix  utils.nix
build-go/: build.pb.go  rpc_build.pb.go  rpc_build_grpc.pb.go
castore/: Cargo.toml  build.rs
castore-go/: castore.pb.go  go.mod  rpc_blobstore.pb.go  rpc_blobstore_grpc.pb.go  rpc_directory.pb.go  rpc_directory_grpc.pb.go
castore/protos/: castore.proto
castore/src/: composition.rs  digests.rs  lib.rs  refscan.rs  utils.rs
castore/src/blobservice/: from_addr.rs  object_store.rs
castore/src/directoryservice/: bigtable.rs  combinators.rs  from_addr.rs  grpc.rs  memory.rs  mod.rs  object_store.rs  redb.rs  traverse.rs
castore/src/directoryservice/tests/: mod.rs
castore/src/fs/: mod.rs  virtiofs.rs
castore/src/fs/fuse/: mod.rs
castore/src/import/: blobs.rs  fs.rs  mod.rs
castore/src/nodes/: directory.rs  mod.rs
castore/src/path/: mod.rs
castore/src/proto/: grpc_blobservice_wrapper.rs  mod.rs
cli/: Cargo.toml
cli/src/: args.rs  lib.rs  main.rs  repl.rs
cli/tests/: repl.rs
docs/src/: SUMMARY.md  TODO.md  community.md  introduction.md
docs/src/castore/: store-configuration.md
docs/src/contributing/: gerrit.md
docs/src/eval/: builtins.md  language-issues.md  vm-loop.md
docs/src/nix-daemon/: logging.md
eval/: Cargo.toml
eval/benches/: eval.rs
eval/builtin-macros/: Cargo.toml
eval/builtin-macros/src/: lib.rs
eval/src/: chunk.rs  errors.rs  io.rs  lib.rs  nix_search_path.rs  observer.rs  opcode.rs  pretty_ast.rs  source.rs  warnings.rs
eval/src/builtins/: impure.rs  mod.rs  to_xml.rs  versions.rs
eval/src/compiler/: bindings.rs  import.rs  mod.rs  scope.rs
eval/src/tests/: nix_tests.rs
eval/src/tests/tvix_tests/: eval-okay-builtins-split.exp  eval-okay-builtins-split.nix  eval-okay-cppnix-value-pointer-equality-encapsulation.nix  eval-okay-nix-version-cmp.nix  eval-okay-value-pointer-equality.exp  eval-okay-value-pointer-equality.nix
eval/src/tests/tvix_tests/notyetpassing/: eval-okay-cppnix-non-identifier-pointer-inequality.nix  eval-okay-lix-value-pointer-equality.exp  eval-okay-lix-value-pointer-equality.nix
eval/src/value/: arbitrary.rs  attrs.rs  json.rs  list.rs  mod.rs  thunk.rs
eval/src/value/attrs/: tests.rs
eval/src/value/string/: mod.rs
eval/src/vm/: generators.rs  mod.rs
eval/tests/: nix_oracle.rs
glue/: Cargo.toml
glue/benches/: eval.rs
glue/src/: fetchurl.rs  known_paths.rs  lib.rs  tvix_build.rs  tvix_store_io.rs
glue/src/builtins/: derivation.rs  errors.rs  fetchers.rs  import.rs  mod.rs  utils.rs
glue/src/fetchers/: mod.rs
glue/src/tests/: mod.rs
nar-bridge/: Cargo.toml
nar-bridge/src/: lib.rs  nar.rs  narinfo.rs
nix-compat/: Cargo.toml
nix-compat-derive/: Cargo.toml
nix-compat-derive-tests/: Cargo.toml
nix-compat-derive-tests/tests/ui/: deserialize_bad_type.stderr
nix-compat-derive/src/internal/: attrs.rs
nix-compat/src/: lib.rs
nix-compat/src/aterm/: parser.rs
nix-compat/src/derivation/: mod.rs  output.rs  parser.rs
nix-compat/src/derivation/tests/: mod.rs
nix-compat/src/log/: mod.rs
nix-compat/src/nar/reader/async/: mod.rs
nix-compat/src/nar/writer/: sync.rs
nix-compat/src/narinfo/: mod.rs  signature.rs  verifying_keys.rs
nix-compat/src/nix_daemon/: handler.rs  mod.rs  types.rs  worker_protocol.rs
nix-compat/src/nix_daemon/framing/: framed_read.rs  mod.rs  stderr_read.rs
nix-compat/src/nixhash/: ca_hash.rs  mod.rs
nix-compat/src/store_path/: mod.rs  utils.rs
nix-compat/src/wire/bytes/: writer.rs
nix-compat/src/wire/bytes/reader/: mod.rs
nix-compat/src/wire/de/: mod.rs
nix-compat/src/wire/ser/: mock.rs  mod.rs  writer.rs
nix-daemon/: Cargo.toml
nix-daemon/src/: lib.rs
nix-lang-test-suite/: README.md
nixpkgs/: default.nix
serde/examples/: cfg-demo.rs
serde/src/: de.rs  error.rs
simstore/: Cargo.toml
simstore/src/: lib.rs
simstore/test-data/: q.txt
sources/: default.nix  sources.json
store/: Cargo.toml  README.md  build.rs
store-go/: go.mod  pathinfo.pb.go  rpc_pathinfo.pb.go  rpc_pathinfo_grpc.pb.go
store/src/: fixtures.rs  lib.rs  utils.rs
store/src/nar/: hashing_reader.rs  import.rs  mod.rs
store/src/pathinfoservice/: bigtable.rs  cache.rs  from_addr.rs  grpc.rs  lru.rs  mod.rs  nix_http.rs  signing_wrapper.rs
store/src/pathinfoservice/tests/: mod.rs  utils.rs
store/src/proto/: mod.rs
store/src/proto/tests/: pathinfo.rs
store/src/tests/: fixtures.rs  nar_renderer.rs  nar_renderer_seekable.rs
tracing/: Cargo.toml
tracing/src/: lib.rs
website/: landing-en.md
