[package]
name = "tvix-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "tvix"
path = "src/main.rs"

[dependencies]
tvix-eval = { path = "../eval" }
tvix-glue = { path = "../glue" }
tvix-simstore = { path = "../simstore" }
clap = { workspace = true, features = ["derive", "env"] }
dirs.workspace = true
rustyline.workspace = true
rnix.workspace = true
rowan.workspace = true
smol_str.workspace = true
tracing.workspace = true
rustc-hash.workspace = true
mimalloc.workspace = true

[dev-dependencies]
expect-test.workspace = true

[features]
default = []
