[package]
name = "tvix-glue"
version = "0.1.0"
edition = "2021"

[dependencies]
bstr.workspace = true
bytes.workspace = true
data-encoding.workspace = true
nix-compat = { path = "../nix-compat", default-features = false }
pin-project.workspace = true
tvix-eval = { path = "../eval" }
tvix-simstore = { path = "../simstore" }
thiserror.workspace = true
serde_json.workspace = true
sha2.workspace = true
sha1.workspace = true
md-5.workspace = true
url.workspace = true
walkdir.workspace = true

[dev-dependencies]
criterion = { workspace = true, features = ["html_reports"] }
hex-literal.workspace = true
mimalloc.workspace = true
nix = { workspace = true, features = ["fs"] }
pretty_assertions.workspace = true
rstest.workspace = true
tempfile.workspace = true

[features]
default = ["nix_tests"]
# Enables running the Nix language test suite from the original C++
# Nix implementation (at version 2.3) against Tvix.
nix_tests = []

[[bench]]
name = "eval"
harness = false
