[package]
name = "nar-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { workspace = true, features = ["http2"] }
axum-extra.workspace = true
axum-range.workspace = true
tower.workspace = true
tower-http = { workspace = true, features = ["compression-zstd", "trace"] }
bytes.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
data-encoding.workspace = true
futures.workspace = true
prost.workspace = true
nix-compat = { path = "../nix-compat", features = ["async"] }
tokio.workspace = true
tokio-listener = { workspace = true, features = ["axum07", "clap", "multi-listener", "sd_listen"] }
tokio-util = { workspace = true, features = ["io", "io-util", "compat"] }
tvix-castore = { path = "../castore" }
tvix-store = { path = "../store" }
tvix-tracing = { path = "../tracing" }
tracing.workspace = true
tracing-test.workspace = true
serde = { workspace = true, features = ["derive"] }
lru.workspace = true
parking_lot.workspace = true
mimalloc.workspace = true

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true

[features]
default = []
xp-store-composition-cli = ["tvix-store/xp-composition-cli"]

[dev-dependencies]
axum-test = "16.4.0"
hex-literal.workspace = true
rstest.workspace = true
sha2.workspace = true

[lints]
workspace = true
