[package]
name = "tvix-store"
version = "0.1.0"
edition = "2021"

[dependencies]
async-compression = { workspace = true, features = ["tokio", "bzip2", "gzip", "xz", "zstd"] }
async-stream.workspace = true
bstr.workspace = true
bytes.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
count-write.workspace = true
data-encoding.workspace = true
ed25519.workspace = true
futures.workspace = true
nix-compat = { path = "../nix-compat", features = ["async"] }
pin-project-lite.workspace = true
prost.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sha1.workspace = true
sha2.workspace = true
md-5.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "macros", "net", "rt", "rt-multi-thread", "signal"] }
tokio-listener = { workspace = true, features = ["clap", "multi-listener", "sd_listen", "tonic012"] }
tokio-stream = { workspace = true, features = ["fs"] }
tokio-util = { workspace = true, features = ["io", "io-util", "compat"] }
tonic = { workspace = true, features = ["tls", "tls-roots"] }
tower.workspace = true
tower-http = { workspace = true, features = ["trace"] }
tvix-castore = { path = "../castore" }
url.workspace = true
reqwest = { workspace = true, features = ["rustls-tls-native-roots", "stream"] }
reqwest-middleware.workspace = true
lru.workspace = true
tracing.workspace = true
tracing-indicatif.workspace = true
hyper-util.workspace = true
toml = { version = "0.8.19", optional = true }
tonic-health.workspace = true
redb = { workspace = true, features = ["logging"] }
mimalloc.workspace = true
auto_impl = "1.2.0"

[build-dependencies]
prost-build.workspace = true
tonic-build.workspace = true

[dev-dependencies]
rstest.workspace = true
rstest_reuse.workspace = true
tempfile.workspace = true
tokio-retry.workspace = true
hex-literal.workspace = true

[features]
default = ["fuse" ]
fuse = ["tvix-castore/fuse"]
virtiofs = ["tvix-castore/virtiofs"]
xp-composition-cli = ["toml", "tvix-castore/xp-composition-url-refs"]

[lints]
workspace = true
