[package]
name = "tvix-tracing"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { workspace = true, features = ["max_level_trace", "release_max_level_debug"] }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
indicatif.workspace = true
tracing-indicatif.workspace = true
thiserror.workspace = true

[features]
default = []

[lints]
workspace = true
